-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2015 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.1
-----------------

3/24/15
    - Fixed problem in have_fcn() where sedumi was turning off and
      leaving off all warnings.


Changes since 5.0
-----------------

3/20/15
    - Released version 5.1.

3/19/15
    - Added support for using PARDISO as linear solver for computing
      interior-point update steps in MIPS (v1.2), via new mplinsolver()
      function and 'mips.linsolver' option.

3/18/15
    - Added four new case files, ranging from 89 up to 9421 buses,
      representing parts of the European high voltage transmission
      network, stemming from the Pan European Grid Advanced Simulation
      and State Estimation (PEGASE) project. Thanks to Cedric Josz and
      colleagues from the French Transmission System Operator.
    - Added network reduction toolbox to extras/reduction directory
      for creating smaller approximate network equivalents from a larger
      original case file. Thanks to Yujia Zhu and Daniel Tylavsky.

3/4/15
    - Added variable type as an attribute to @opt_model, so you can
      now specify variables as 'C', 'I', or 'B' (continuous, integer,
      or binary) when adding variables with add_vars() and getv() can
      optionally return a variable-type string suitable for passing
      to miqps_matpower() and friends.

2/26/15
    - Minor speed improvements in various @opt_model functions from
      bypassing calls to substruct().

2/25/15
    - Switch to more permissive 3-clause BSD license from GPL 3.0.

2/24/15
    - Added function mpoption_info_intlinprog(), tag 'intlinprog' to
      have_fcn() and optional 'intlinprog' field to MATPOWER options.