@@ -15,7 +15,7 @@ if nargin < 1
     quiet = 0;
 end
 
-t_begin(35, quiet);
+t_begin(44, quiet);
 
 casefile = 't_case9_pf';
 if quiet
@@ -100,27 +100,32 @@ mpopt = mpoption(mpopt, 'pf.alg', 'NR', 'verbose', 0);
 mpc = loadcase(casefile);
 mpc.gen(1, [QMIN QMAX]) = [20 20];
 [baseMVA, bus, gen, branch, success, et] = runpf(mpc, mpopt);
+t_ok(success, [t 'success']);
 t_is(gen(1, QG), 24.07, 2, [t 'single gen, Qmin = Qmax']);
 
 mpc.gen = [mpc.gen(1, :); mpc.gen];
 mpc.gen(1, [QMIN QMAX]) = [10 10];
 mpc.gen(2, [QMIN QMAX]) = [0 50];
 [baseMVA, bus, gen, branch, success, et] = runpf(mpc, mpopt);
+t_ok(success, [t 'success']);
 t_is(gen(1:2, QG), [10; 14.07], 2, [t '2 gens, Qmin = Qmax for one']);
 
 mpc.gen(1, [QMIN QMAX]) = [10 10];
 mpc.gen(2, [QMIN QMAX]) = [-50 -50];
 [baseMVA, bus, gen, branch, success, et] = runpf(mpc, mpopt);
+t_ok(success, [t 'success']);
 t_is(gen(1:2, QG), [12.03; 12.03], 2, [t '2 gens, Qmin = Qmax for both']);
 
 mpc.gen(1, [QMIN QMAX]) = [0 50];
 mpc.gen(2, [QMIN QMAX]) = [0 100];
 [baseMVA, bus, gen, branch, success, et] = runpf(mpc, mpopt);
+t_ok(success, [t 'success']);
 t_is(gen(1:2, QG), [8.02; 16.05], 2, [t '2 gens, proportional']);
 
 mpc.gen(1, [QMIN QMAX]) = [-50 0];
 mpc.gen(2, [QMIN QMAX]) = [50 150];
 [baseMVA, bus, gen, branch, success, et] = runpf(mpc, mpopt);
+t_ok(success, [t 'success']);
 t_is(gen(1:2, QG), [-50+8.02; 50+16.05], 2, [t '2 gens, proportional']);
 
 t = 'reactive generation allocation : ';
@@ -138,6 +143,7 @@ mpc.gen = [
 ];
 mpc.bus(3, BUS_TYPE) = PQ;
 r = runpf(mpc, mpopt);
+t_ok(r.success, [t 'success']);
 t_is(r.gen(2:4, QG), [-5; -5; 10] + [1; 2; 3]*1.989129794, 8, [t 'PV bus']);
 t_is(r.gen(5:7, QG), [1; 2; -3], 8, [t 'PQ bus']);
 
@@ -150,16 +156,17 @@ mpc0.gen = [mpc0.gen(1, :); mpc0.gen];
 mpc1 = mpc0;
 mpc  = mpc0;
 nb = size(mpc.bus, 1);
-mpc1.bus(:, BUS_I)		= mpc1.bus(:, BUS_I) + nb;
-mpc1.branch(:, F_BUS)	= mpc1.branch(:, F_BUS) + nb;
-mpc1.branch(:, T_BUS)	= mpc1.branch(:, T_BUS) + nb;
-mpc1.gen(:, GEN_BUS)	= mpc1.gen(:, GEN_BUS) + nb;
-mpc.bus			= [mpc.bus; mpc1.bus];
-mpc.branch		= [mpc.branch; mpc1.branch];
-mpc.gen			= [mpc.gen; mpc1.gen];
+mpc1.bus(:, BUS_I)      = mpc1.bus(:, BUS_I) + nb;
+mpc1.branch(:, F_BUS)   = mpc1.branch(:, F_BUS) + nb;
+mpc1.branch(:, T_BUS)   = mpc1.branch(:, T_BUS) + nb;
+mpc1.gen(:, GEN_BUS)    = mpc1.gen(:, GEN_BUS) + nb;
+mpc.bus         = [mpc.bus; mpc1.bus];
+mpc.branch      = [mpc.branch; mpc1.branch];
+mpc.gen         = [mpc.gen; mpc1.gen];
 %mpopt = mpoption(mpopt, 'out.bus', 1, 'out.gen', 1, 'out.all', -1, 'verbose', 2);
 mpopt = mpoption(mpopt, 'verbose', verbose);
 r = rundcpf(mpc, mpopt);
+t_ok(r.success, [t 'success']);
 t_is(r.bus( 1:9,  VA), bus_soln(:, VA), 8, [t 'voltage angles 1']);
 t_is(r.bus(10:18, VA), bus_soln(:, VA), 8, [t 'voltage angles 2']);
 Pg = [gen_soln(1, PG)-30; 30; gen_soln(2:3, PG)];
@@ -170,11 +177,19 @@ t = 'network w/islands : AC PF : ';
 %% get solved AC power flow case from MAT-file
 load soln9_pf;      %% defines bus_soln, gen_soln, branch_soln
 r = runpf(mpc, mpopt);
+t_ok(r.success, [t 'success']);
 t_is(r.bus( 1:9,  VA), bus_soln(:, VA), 8, [t 'voltage angles 1']);
 t_is(r.bus(10:18, VA), bus_soln(:, VA), 8, [t 'voltage angles 2']);
 Pg = [gen_soln(1, PG)-30; 30; gen_soln(2:3, PG)];
 t_is(r.gen(1:4, PG), Pg, 8, [t 'active power generation 1']);
 t_is(r.gen(5:8, PG), Pg, 8, [t 'active power generation 1']);
+
+%% island without slack bus (catch singluar matrix?)
+t = 'network w/islands w/o slack : DC PF : ';
+k = find(mpc.bus(:, BUS_TYPE) == REF);
+mpc.bus(k(2), BUS_TYPE) = PV;
+r = rundcpf(mpc, mpopt);
+t_ok(~r.success, [t 'success']);
 
 t_end;
 
