@@ -16,7 +16,9 @@ Changes since 5.1
 -----------------
 
 3/24/15
-    - Fixed problem in have_fcn() where sedumi was turning off and
+    - Added code to DC OPF to return success = 0 for cases where the
+      matrix is singular (e.g. islanded system without slack).
+    - Fixed problem in have_fcn() where SeDuMi was turning off and
       leaving off all warnings.
 
 
